--- a/Recreational/pickAndDrop/style.css
+++ b/Recreational/pickAndDrop/style.css
@@ -3,7 +3,7 @@ body {
     text-transform: uppercase;
 }
 #mainContent{
-	background-color:#bfb8e7;
+	background-color:#74c69d;
 }
 .quiz-wrapper {
     position: relative;
