--- a/EducationTool/style.css
+++ b/EducationTool/style.css
@@ -44,7 +44,7 @@ header {
         color: green;
       }
       body{
-        background-color: #bfb8e7;
+        background-color: #74c69d;
       }
       .heading{
         margin-bottom: 5%;
