--- a/EducationTool/textToSpeech.css
+++ b/EducationTool/textToSpeech.css
@@ -41,7 +41,7 @@ table.sub {
 .mg {
     font-size: 1.5em;
     text-align: center;
-    background-color: #bfb8e7;
+    background-color: #74c69d;
     color: inherit;
   font-family: "Times New Roman", serif;
 }
@@ -50,7 +50,7 @@ body {
   min-height: 100vh;
   margin: 0;
   padding: 0;
-	background-color:#bfb8e7;
+	background-color:#74c69d;
 }
 body {
   font-family: Helvetica, Arial, sans-serif;
