--- a/Recreational/MTF/style.css
+++ b/Recreational/MTF/style.css
@@ -3,7 +3,7 @@ body {
     text-transform: uppercase;
 }
 #mainContent{
-	background-color:#bfb8e7;
+	background-color:#74c69d;
 }
 img{
     height:10%;
@@ -15,7 +15,7 @@ input{
 #buttonBox{
 	margin: 150px auto;
 	padding:5%;
-	background-color:#b599e5;
+	background-color:#1b4332;
     border-radius:10px;
     transition: background-color 0.5s ease;
 }
