--- a/TeachingAid/style.css
+++ b/TeachingAid/style.css
@@ -21,7 +21,7 @@
         color: green;
       }
       body{
-        background-color: #bfb8e7;
+        background-color: #74c69d;
       }
       .heading{
         margin-bottom: 5%;
