--- a/aboutus/style.css
+++ b/aboutus/style.css
@@ -1,8 +1,8 @@
 body{
-	background-color:#bfb8e7;
+	background-color:#74c69d;
 }
 .container{
-	background-color:#f7f7f8;
+	background-color:#c9c9bb;
     width: 60%;
 	margin-left:22%;
 	border-radius:5%;
