--- a/home/style.css
+++ b/home/style.css
@@ -3,12 +3,12 @@ body {
     text-transform: uppercase;
 }
 #mainContent{
-	background-color:#bfb8e7;
+	background-color:#74c69d;
 }
 #buttonBox{
 	margin: 150px auto;
 	padding:5%;
-	background-color:#b599e9;
+	background-color:#1b4332;
 	border-radius:10px;
 }
 #quizContentdisplay{
